# PodcastCleaner

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  colab_pipeline.ipynb  config.example.yaml  config.yaml  docker-compose.yml  pyproject.toml  setup.sh
.github/workflows/: ci.yml
podcast_cleaner/: __init__.py  cli.py  config.py  display.py  tracker.py  utils.py
podcast_cleaner/analysis/: __init__.py  audio_stats.py
podcast_cleaner/stages/: __init__.py  denoise.py  download.py  export.py  normalize.py  preprocess.py  separate.py  transcribe.py
tests/: conftest.py  test_audio_data.py  test_audio_stats.py  test_cli.py  test_config.py  test_denoise.py  test_download.py  test_export.py  test_integration.py  test_normalize.py  test_preprocess.py  test_separate.py  test_tracker.py  test_transcribe.py  test_utils.py
