[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "podcast-cleaner"
version = "0.1.0"
description = "CLI tool for downloading and cleaning podcast audio"
requires-python = ">=3.10"
authors = [
    {name = "Tristan Peters"},
]
readme = "README.md"
keywords = ["podcast", "audio", "demucs", "deepfilternet", "noise-reduction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1,<9",
    "yt-dlp>=2024.0,<2027",
    "demucs>=4.0,<5",
    "deepfilternet>=0.5,<1",
    "pyloudnorm>=0.1,<1",
    "soundfile>=0.12,<1",
    "torch>=2.0,<2.9",
    "torchaudio>=2.0,<2.9",
    "numpy>=1.24,<3",
    "pyyaml>=6.0,<7",
    "tqdm>=4.65,<5",
    "scipy>=1.10,<2",
    "rich>=13.0,<14",
]

[project.optional-dependencies]
transcribe = ["whisperx>=3.1,<4"]
dev = ["pytest>=7.0,<9", "pytest-cov", "pytest-mock"]
all = ["podcast-cleaner[transcribe,dev]"]

[project.urls]
Repository = "https://github.com/TristanPetersDS/PodcastCleaner"

[tool.setuptools.packages.find]
include = ["podcast_cleaner*"]

[project.scripts]
podcast-cleaner = "podcast_cleaner.cli:main"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that run real ML models (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
